# radiogarden-c-client

./: .gitignore  CMakeLists.txt  README.md
api/: ChannelsAPI.c  ChannelsAPI.h  GeoAPI.c  GeoAPI.h  PlacesAPI.c  PlacesAPI.h  SearchAPI.c  SearchAPI.h
docs/: ChannelsAPI.md  GeoAPI.md  PlacesAPI.md  SearchAPI.md  _ara_content_channel__channel_id__get_200_response.md  _ara_content_page__place_id__channels_get_200_response.md  _ara_content_page__place_id__channels_get_200_response_all_of_data.md  _ara_content_page__place_id__get_200_response.md  _ara_content_page__place_id__get_200_response_all_of_data.md  _ara_content_places_get_200_response.md  _ara_content_places_get_200_response_all_of_data.md  _search_get_200_response.md  channel.md  channel_country.md  channel_place.md  channel_place_ref.md  channel_ref.md  channel_refs.md  cities.md  country_popular_stations.md  country_popular_stations_items_inner.md  country_ref.md  geolocation.md  left_page_ref.md  local_pick_stations.md  local_popular_stations.md  more_ref.md  more_ref_page.md  nearby_places.md  place.md  place_content.md  place_content_content_inner.md  place_ref.md  right_page_ref.md  search_result.md  search_result__source.md  search_results.md  search_results_hits.md  selected_stations.md  selected_stations_items_inner.md  (+1 more)
example/: main.c
model/: _ara_content_channel__channel_id__get_200_response.c  _ara_content_channel__channel_id__get_200_response.h  _ara_content_page__place_id__channels_get_200_response.c  _ara_content_page__place_id__channels_get_200_response.h  _ara_content_page__place_id__channels_get_200_response_all_of_data.c  _ara_content_page__place_id__channels_get_200_response_all_of_data.h  _ara_content_page__place_id__get_200_response.c  _ara_content_page__place_id__get_200_response.h  _ara_content_page__place_id__get_200_response_all_of_data.c  _ara_content_page__place_id__get_200_response_all_of_data.h  _ara_content_places_get_200_response.c  _ara_content_places_get_200_response.h  _ara_content_places_get_200_response_all_of_data.c  _ara_content_places_get_200_response_all_of_data.h  _search_get_200_response.c  _search_get_200_response.h  channel.c  channel.h  channel_country.c  channel_country.h  channel_place.c  channel_place.h  channel_place_ref.c  channel_place_ref.h  channel_ref.c  channel_ref.h  channel_refs.c  channel_refs.h  cities.c  cities.h  country_popular_stations.c  country_popular_stations.h  country_popular_stations_items_inner.c  country_popular_stations_items_inner.h  country_ref.c  country_ref.h  geolocation.c  geolocation.h  left_page_ref.c  left_page_ref.h  (+34 more)
src/: apiClient.c
unit-test/: test__ara_content_channel__channel_id__get_200_response.c  test__ara_content_page__place_id__channels_get_200_response.c  test__ara_content_page__place_id__channels_get_200_response_all_of_data.c  test__ara_content_page__place_id__get_200_response.c  test__ara_content_page__place_id__get_200_response_all_of_data.c  test__ara_content_places_get_200_response.c  test__ara_content_places_get_200_response_all_of_data.c  test__search_get_200_response.c  test_channel.c  test_channel_country.c  test_channel_place.c  test_channel_place_ref.c  test_channel_ref.c  test_channel_refs.c  test_cities.c  test_country_popular_stations.c  test_country_popular_stations_items_inner.c  test_country_ref.c  test_geolocation.c  test_left_page_ref.c  test_local_pick_stations.c  test_local_popular_stations.c  test_more_ref.c  test_more_ref_page.c  test_nearby_places.c  test_place.c  test_place_content.c  test_place_content_content_inner.c  test_place_ref.c  test_right_page_ref.c  test_search_result.c  test_search_result__source.c  test_search_results.c  test_search_results_hits.c  test_selected_stations.c  test_selected_stations_items_inner.c  test_versioned.c
